samples/_failures_safe/1761473866_b64147_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c12fc4c5.c: In function ‘main’:
./samples/SAFE/__tmp_c12fc4c5.c:155:15: error: expected ‘;’ at end of input
  155 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_c12fc4c5.c:155:9: error: expected declaration or statement at end of input
  155 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_c12fc4c5.c:155:9: error: expected declaration or statement at end of input
